--- a/3. Architecture_DockerCE.md
+++ b/3. Architecture_DockerCE.md
@@ -10,10 +10,33 @@
 ## Kiến trúc của Docker
 ![image](https://github.com/DinhHa1011/Docker/assets/119484840/e12d7120-ba61-42aa-afb5-a77f3ba16e47)
 - Docker sử dụng kiến trúc client-server. Docker server (docker daemon) chịu trách nhiệm build, run, distrubute docker container.  Docker client và Docker server có thể nằm trên cùng một server hoặc khác server. Chúng giao tiếp với nhau thông qua REST API dựa trên UNIX sockets hoặc network interface.
-- Docker daemon
-- Docker client
-- Docker registry
-- Docker object
-  - images
-  - container
+- Docker daemon (dockerd): là thành phần core, lắng nghe API request và quản lý các Docker object. Docker daemon host này cũng có thể giao tiếp được với Docker daemon ở host khác.
+- Docker client (docker): là phương thức chính để người dùng thao tác với Docker. Khi người dùng gõ lệnh `docker run imageABC` tức là người dùng sử dụng CLI và gửi request đến dockerd thông qua api, và sau đó Docker daemon sẽ xử lý tiếp. Docker client có thể giao tiếp và gửi request đến nhiều Docker daemon.
+- Docker registry: là một kho chứa các Image. Nổi tiếng nhất chính là Docker Hub, ngoài ra bạn có thể tự xây dựng một Docker registry cho riêng mình.
+- Docker object: Các object này chính là các đối tượng mà bạn thường xuyên gặp phải khi sử dụng Docker gồm có
+  - images:
+    - Image là một template read-only sử dụng để chạy container.
+    - Một image có thể base trên một image khác. Ví dụ bạn muốn tạo một image nginx, tất nhiên nginx phải chạy trên linux ubuntu chẳng hạn. Khi đó image nginx trước hết sẽ phải base trên ubuntu trước đã.
+    - Bạn có thể tự build image cho riêng mình hoặc tải các image có sẵn của người khác trên Docker registry.
+  - container:
+    - Container được chạy dựa trên 1 image cụ thể. Bạn có thể tạo, start, stop, move, delete container.
+    - Bạn cũng có thể kết nối các container với nhau hoặc attach storage cho nó, thậm chí là tạo lại một image từ chính state hiện tại của container
+    - Container cô lập tài nguyên với host và các container khác.
+## Phía trên là một qúa trình thao tác với Docker. Dưới đây là quá trình chạy một container
+- Docker client (CLI) dùng lệnh sau để chạy 1 container centos trắng:
+```
+docker run -itd centos
+```
+- Docker daemon kiểm tra xem nó có images centos nào không. Nếu có nó sẽ chạy container luôn. Nếu không nó sẽ pull image centos (tag mặc định là lastest) về từ Registry và sau đó mới chạy container. Kiểm tra xem container đang chạy sử dụng lệnh:
+```
+docker ps
+```
+## Ví dụ chạy mọt container centos trắng
+- Điều kiện tiên quyết
+  - Máy đã cài docker
+- Kiểm tra list image
+  ```
+  docker images
+  ```
+  
 
