--- a/3. Architecture_DockerCE.md
+++ b/3. Architecture_DockerCE.md
@@ -32,11 +32,47 @@ docker run -itd centos
 docker ps
 ```
 ## Ví dụ chạy mọt container centos trắng
-- Điều kiện tiên quyết
-  - Máy đã cài docker
-- Kiểm tra list image
-  ```
-  docker images
-  ```
-  
+### Điều kiện tiên quyết
+- Máy đã cài docker
+### Kiểm tra list image
+- Theo lý thuyết, để chạy một `container` thì cần một image tương ứng. Để kiểm tra image đã có chưa ta sử dụng lệnh
+```
+docker images
+```
+![image](https://github.com/DinhHa1011/Docker/assets/119484840/555ebc6d-5fb4-483e-acd6-44e9dc291a16)
+### Tìm image để pull
+- Như trên có image hello-world
+- Tìm xem có image repository nào trên mạng có tên là centos không
+```
+docker search images
+```
+![image](https://github.com/DinhHa1011/Docker/assets/119484840/fd244d90-a2a0-4d51-8211-216f9769de38)
+### Download image
+```
+docker pull centos
+```
+![image](https://github.com/DinhHa1011/Docker/assets/119484840/ede84dc1-51e5-411f-80b7-4311c5de3800)
+- Mặc định nếu không chỉ rõ phiên bản thì docker sẽ pull image lastest từ phía Registry về
+### Kiểm tra lại image
+```
+docker images
+```
+![image](https://github.com/DinhHa1011/Docker/assets/119484840/0974a42c-05ec-4362-9dcd-5cf4c5c81ed9)
+### Chạy container
+- Để chạy container có thể sử dụng tên image hoặc imageid đều được
+```
+docker run -itd centos
+```
+![image](https://github.com/DinhHa1011/Docker/assets/119484840/ee575ae8-bfbc-415a-9d65-ed007c10c299)
+### Kiểm tra xem container đã chạy chưa
+```
+docker ps
+```
+![image](https://github.com/DinhHa1011/Docker/assets/119484840/ca2685da-f29d-4677-8fd5-94c272762185)
+
+
+
+
+
+
 
